first complete version

--- a/src/data/config.json
+++ b/src/data/config.json
@@ -24,7 +24,7 @@
       "title": "Always Becoming",
       "nav": "About",
       "header1": "Always Becoming",
-      "text1": "House Blivande is a community for work, creativity and participatory culture in Stockholm. Our 40 to 60 members have access to offices, meeting rooms, workshops, a library, communal spaces, a wood workshop, sewing machines, an electronics labs, micromanufacturing, a metal workshop and a community to call their own.",
+      "text1": "House Blivande is a community for work, creativity and participatory culture in Stockholm. Our 40 to 60 members have access to offices, meeting rooms, workshops, a library, communal spaces, a wood workshop, sewing machines, an electronics lab, micromanufacturing, a metal workshop and a community to call their own.",
       "action1": "Work & Create at Blivande",
       "action1url": "#beta",
       "header2": "Expanding Creativity",
