first complete version

--- a/src/data/config.json
+++ b/src/data/config.json
@@ -43,7 +43,7 @@
         "poster": ""
       },
       "text": {
-        "content": "<p>Are you wondering how to make a difference? Join us at Blivande to make visors and medical gowns for health care professionals fighting COVID-19. Regular people wanting to make a differece are working in shifts. Sign up or just show up if you are without any symptoms. </p><p><strong>Where:</strong> Södra Hamnvägen 9, Stockholm<br><strong>When</strong>: 09:00 to 21:00, every day",
+        "content": "<p>Are you wondering how to make a difference? Join us at Blivande to make visors and medical gowns for health care professionals fighting COVID-19. Regular people wanting to make a difference are working in shifts. Sign up or just show up if you are without any symptoms. </p><p><strong>Where:</strong> Södra Hamnvägen 9, Stockholm<br><strong>When</strong>: 09:00 to 21:00, every day",
         "position": "right",
         "buttons": [
           {
