--- a/src/data/config.json
+++ b/src/data/config.json
@@ -164,20 +164,14 @@
         "position": "right",
         "buttons": [
           {
-            "text": "+ Learn more",
-            "url": "https://www.noden.community/",
+            "text": "+ Join",
+            "url": "https://www.noden.community/membership",
             "background": "Transparent",
             "color": "black"
           },
           {
             "text": "+ Donate",
             "url": "https://www.noden.community/donate",
-            "background": "Transparent",
-            "color": "black"
-          },
-          {
-            "text": "+ Become a member",
-            "url": "https://www.noden.community/membership",
             "background": "Transparent",
             "color": "black"
           }
